# pins

./: .gitignore  .pre-commit-config.yaml  CUSTOM_SCENARIOS.md  DEV.md  DOCS_AS_CODE_SUMMARY.md  MORE_EXPLICIT_IDEA.md  README.md  config.example.yaml  debug_test.py  pyproject.toml  report.html  requirements-docs.txt
.github/: copilot-instructions.md
.github/workflows/: docs.yml  lint_and_test.yaml
docs/: Makefile  NOTES.md  build.bat  build.sh  yaml-configuration.md
docs/source/: conf.py  index.md
pins/: __main__.py  cli.py  filters.py  loader.py  models.py  resolve.py  utils.py
pins/scenario/: __init__.py  base.py  complex_shadowing.py  shadowing.py
policy_inspector/: __init__.py  __main__.py  check.py  cli.py  cli_utils.py  config.py  display.py  displayer.py  enhanced_cli.py  evaluate.py  exporter.py  filters.py  lazy_group.py  load.py  loader.py  mock_panorama.py  models.py  panorama.py  param.py  resolve.py  resolver.py  run_config.py  scenario.py  utils.py
policy_inspector/cli/: base_group.py  groups.py  lazy_group.py  loader.py  options.py
policy_inspector/connector/: panorama.py
policy_inspector/example/: cmd.py
policy_inspector/model/: address_group.py  address_object.py  advanced_security_rule.py  base.py  security_rule.py
policy_inspector/output/: displayer.py  exporter.py  html_report.py  utils.py
policy_inspector/scenario/: __init__.py  advanced_shadowing.py  base.py  complex_shadowing.py  shadowing.py  shadowing_by_value.py
policy_inspector/scenarios/: __init__.py  enhanced_shadowing.py
rules_check/: __main__.py  check.py  evaluate.py  models.py  resolve.py  utils.py
scripts/: coverage_integration.py  docs_maintenance.py  docs_versioning.py  docstring_validator.py  fake_rule_generator.py  replace_tokens.py  validate_docs_system.py
tests/: _test_resolver.py  big_report.html  conftest.py  test.py  test_checks.py  test_cli.py  test_config.py  test_export_html_report.py  test_export_show_options.py  test_filters.py  test_loader.py  test_model_address_object.py  test_panorama_options.py  test_resolver.py  test_run_config.py  test_scenario.py  test_scenario_base.py  test_scenario_loader.py  test_scenario_shadowing.py  test_yaml_config.py
(+79 files in other folders)
